force-app/main/default/objects/Opportunity/fields/BindingDate__c.field-meta.xml
<CustomField>
    <fullName>BindingDate__c</fullName>
    <label>Binding Date</label>
    <type>Date</type>
</CustomField>