force-app/main/default/objects/Opportunity/fields/BizRegion_fm__c.field-meta.xml
<CustomField>
    <fullName>BizRegion_fm__c</fullName>
    <description>기회 Owner 의 담당 사업지역</description>
    <formula>&quot;0&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>(X)Biz Region</label>
    <type>Text</type>
</CustomField>