force-app/main/default/objects/Opportunity/fields/CedantContact_lk__c.field-meta.xml
<CustomField>
    <fullName>CedantContact_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cedant Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Cedant Contact)</relationshipLabel>
    <relationshipName>OpportunitiesByCedantContact</relationshipName>
    <type>Lookup</type>
</CustomField>