force-app/main/default/objects/Opportunity/fields/CedantCountry_fm__c.field-meta.xml
<CustomField>
    <fullName>CedantCountry_fm__c</fullName>
    <formula>TEXT(Account.Country__c)</formula>
    <label>Cedant Country</label>
    <type>Text</type>
</CustomField>