force-app/main/default/objects/Opportunity/fields/CedantFacility_lk__c.field-meta.xml
<CustomField>
    <fullName>CedantFacility_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cedant Facility</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>COM_FacilityParticipant__c.Cedant__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <filterItems>
            <field>COM_FacilityParticipant__c.CedantAccount_lk__c</field>
            <operation>equals</operation>
            <valueField>$Source.CedantName_lk__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>COM_FacilityParticipant__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>OpportunitiesByCedantFacility</relationshipName>
    <type>Lookup</type>
</CustomField>