force-app/main/default/objects/Opportunity/fields/CedantName_lk__c.field-meta.xml
<CustomField>
    <fullName>CedantName_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cedant Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.isInsurerAcc__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Cedant)</relationshipLabel>
    <relationshipName>OpportunitiesAsCedant</relationshipName>
    <type>Lookup</type>
</CustomField>