force-app/main/default/objects/Opportunity/fields/CedingType1__c.field-meta.xml
<CustomField>
    <fullName>CedingType1__c</fullName>
    <label>Ceding Type1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>COM_Ceding_Type1</valueSetName>
    </valueSet>
</CustomField>