force-app/main/default/objects/Opportunity/fields/CedingType2__c.field-meta.xml
<CustomField>
    <fullName>CedingType2__c</fullName>
    <label>Ceding Type2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CedingType1__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>COM_Ceding_Type2</valueSetName>
    </valueSet>
</CustomField>