force-app/main/default/objects/Opportunity/fields/CRSEstimatedCommission__c.field-meta.xml
<CustomField>
    <fullName>CRSEstimatedCommission__c</fullName>
    <description>수수료 규모</description>
    <label>Estimated Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>