force-app/main/default/objects/Opportunity/fields/CRSEstimatedPermium__c.field-meta.xml
<CustomField>
    <fullName>CRSEstimatedPermium__c</fullName>
    <description>보험료 규모</description>
    <label>Estimated Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>