force-app/main/default/objects/Opportunity/fields/CRSExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>CRSExpirationDate__c</fullName>
    <description>보험종료일</description>
    <label>Expiration Date</label>
    <type>DateTime</type>
</CustomField>