force-app/main/default/objects/Opportunity/fields/CRSIdentificationValue__c.field-meta.xml
<CustomField>
    <fullName>CRSIdentificationValue__c</fullName>
    <description>기회식별값(계약까지 연계)</description>
    <label>Identification Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>