force-app/main/default/objects/Opportunity/fields/CRSInceptionDate__c.field-meta.xml
<CustomField>
    <fullName>CRSInceptionDate__c</fullName>
    <description>보험개시일</description>
    <label>Inception Date</label>
    <type>DateTime</type>
</CustomField>