force-app/main/default/objects/Opportunity/fields/CRSInceptionDate_fm__c.field-meta.xml
<CustomField>
    <fullName>CRSInceptionDate_fm__c</fullName>
    <formula>CASE( Text ( BizRegion__c ),
&quot;LK_KR&quot;, SUBSTITUTE( TEXT( CRSInceptionDate__c + 9/24 ), &quot;Z&quot;, &quot;&quot;),
&quot;LK_Re&quot;, SUBSTITUTE( TEXT( CRSInceptionDate__c + 8/24 ), &quot;Z&quot;, &quot;&quot;),
&quot;LK_VN&quot;, SUBSTITUTE( TEXT( CRSInceptionDate__c + 7/24 ), &quot;Z&quot;, &quot;&quot;),
&quot;LK_A&amp;G&quot;,SUBSTITUTE( TEXT( CRSInceptionDate__c + 9/24 ), &quot;Z&quot;, &quot;&quot;),
null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inception Date</label>
    <type>Text</type>
</CustomField>