force-app/main/default/objects/Opportunity/fields/CRSInsured_lk__c.field-meta.xml
<CustomField>
    <fullName>CRSInsured_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>피보험자</description>
    <label>Insured</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.isGeneralAcc__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Insured)</relationshipLabel>
    <relationshipName>OpportunitiesAsInsured</relationshipName>
    <type>Lookup</type>
</CustomField>