force-app/main/default/objects/Opportunity/fields/CRSInsurer_lk__c.field-meta.xml
<CustomField>
    <fullName>CRSInsurer_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>보험사(간사사)</description>
    <label>Insurer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.isInsurerAcc__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Insurer)</relationshipLabel>
    <relationshipName>OpportunitiesAsInsurer</relationshipName>
    <type>Lookup</type>
</CustomField>