force-app/main/default/objects/Opportunity/fields/CRSOpenPolicy_is__c.field-meta.xml
<CustomField>
    <fullName>CRSOpenPolicy_is__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Open Policy</label>
    <type>Checkbox</type>
</CustomField>