force-app/main/default/objects/Opportunity/fields/CRSPolicyholder_lk__c.field-meta.xml
<CustomField>
    <fullName>CRSPolicyholder_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>계약자</description>
    <label>Policy Holder</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.isGeneralAcc__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Policy Holder)</relationshipLabel>
    <relationshipName>OpportunitiesAsPolicyHolder</relationshipName>
    <type>Lookup</type>
</CustomField>