force-app/main/default/objects/Opportunity/fields/CRSPriorStage__c.field-meta.xml
<CustomField>
    <fullName>CRSPriorStage__c</fullName>
    <label>Prior Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>