force-app/main/default/objects/Opportunity/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <label>Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>COM_Currency</valueSetName>
    </valueSet>
</CustomField>