force-app/main/default/objects/Opportunity/fields/Facility_lk__c.field-meta.xml
<CustomField>
    <fullName>Facility_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>(X)Facility</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Facility)</relationshipLabel>
    <relationshipName>OpportunitiesAsFacilitys</relationshipName>
    <type>Lookup</type>
</CustomField>