force-app/main/default/objects/Opportunity/fields/FacTreaty__c.field-meta.xml
<CustomField>
    <fullName>FacTreaty__c</fullName>
    <label>(X)Fac/Treaty</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fac</fullName>
            </value>
            <value>
                <fullName>Treaty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>