force-app/main/default/objects/Opportunity/fields/IncomeClass__c.field-meta.xml
<CustomField>
    <fullName>IncomeClass__c</fullName>
    <label>Income Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New(Non-recurring)</fullName>
            </value>
            <value>
                <fullName>New(Recurring)</fullName>
            </value>
            <value>
                <fullName>Renew</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>