force-app/main/default/objects/Opportunity/fields/InsurancePolicy_lk__c.field-meta.xml
<CustomField>
    <fullName>InsurancePolicy_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insurance Policy</label>
    <referenceTo>InsurancePolicy</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>