force-app/main/default/objects/Opportunity/fields/InsuredGroup_lk__c.field-meta.xml
<CustomField>
    <fullName>InsuredGroup_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insured Group</label>
    <referenceTo>COM_Facility__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>OpportunitiesByFacility</relationshipName>
    <type>Lookup</type>
</CustomField>