force-app/main/default/objects/Opportunity/fields/Leader_lk__c.field-meta.xml
<CustomField>
    <fullName>Leader_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Leader</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Leader)</relationshipLabel>
    <relationshipName>OpportunitiesAsLeaders</relationshipName>
    <type>Lookup</type>
</CustomField>