force-app/main/default/objects/Opportunity/fields/LKCobroker_lk__c.field-meta.xml
<CustomField>
    <fullName>LKCobroker_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Co-Owner</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2) OR (3 AND 4) OR (5 AND 6) OR (7 AND 8)</booleanFilter>
        <filterItems>
            <field>$User.Region__c</field>
            <operation>equals</operation>
            <value>SG</value>
        </filterItems>
        <filterItems>
            <field>User.Region__c</field>
            <operation>equals</operation>
            <value>SG</value>
        </filterItems>
        <filterItems>
            <field>$User.Region__c</field>
            <operation>equals</operation>
            <value>KR</value>
        </filterItems>
        <filterItems>
            <field>User.Region__c</field>
            <operation>equals</operation>
            <value>KR</value>
        </filterItems>
        <filterItems>
            <field>$User.Region__c</field>
            <operation>equals</operation>
            <value>VN</value>
        </filterItems>
        <filterItems>
            <field>User.Region__c</field>
            <operation>equals</operation>
            <value>VN</value>
        </filterItems>
        <filterItems>
            <field>$User.Region__c</field>
            <operation>equals</operation>
            <value>A&amp;G</value>
        </filterItems>
        <filterItems>
            <field>User.Region__c</field>
            <operation>equals</operation>
            <value>A&amp;G</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>