force-app/main/default/objects/Opportunity/fields/LkRefNo__c.field-meta.xml
<CustomField>
    <fullName>LkRefNo__c</fullName>
    <label>LK Ref No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>