force-app/main/default/objects/Opportunity/fields/LOB3__c.field-meta.xml
<CustomField>
    <fullName>LOB3__c</fullName>
    <label>LOB3</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LOB2__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>COM_LOB3</valueSetName>
    </valueSet>
</CustomField>