force-app/main/default/objects/Opportunity/fields/LostDate__c.field-meta.xml
<CustomField>
    <fullName>LostDate__c</fullName>
    <label>Lost Date</label>
    <type>Date</type>
</CustomField>