force-app/main/default/objects/Opportunity/fields/MGAName__c.field-meta.xml
<CustomField>
    <fullName>MGAName__c</fullName>
    <label>MGA Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>