force-app/main/default/objects/Opportunity/fields/OtherDeductionsPct__c.field-meta.xml
<CustomField>
    <fullName>OtherDeductionsPct__c</fullName>
    <label>Other Deductions(%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>