force-app/main/default/objects/Opportunity/fields/PaymentType__c.field-meta.xml
<CustomField>
    <fullName>PaymentType__c</fullName>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Signle</fullName>
            </value>
            <value>
                <fullName>Install</fullName>
            </value>
            <value>
                <fullName>SOA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>