force-app/main/default/objects/Opportunity/fields/PeriodFrom__c.field-meta.xml
<CustomField>
    <fullName>PeriodFrom__c</fullName>
    <label>Inception Date</label>
    <type>Date</type>
</CustomField>