force-app/main/default/objects/Opportunity/fields/PeriodTo__c.field-meta.xml
<CustomField>
    <fullName>PeriodTo__c</fullName>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>