force-app/main/default/objects/Opportunity/fields/PolicyNature__c.field-meta.xml
<CustomField>
    <fullName>PolicyNature__c</fullName>
    <label>Policy Nature</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Offshores</fullName>
            </value>
            <value>
                <fullName>Onshore</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>