force-app/main/default/objects/Opportunity/fields/RecalculateRequired__c.field-meta.xml
<CustomField>
    <fullName>RecalculateRequired__c</fullName>
    <label>Recalculate Required</label>
    <type>DateTime</type>
</CustomField>