force-app/main/default/objects/Opportunity/fields/ReCobroker_lk__c.field-meta.xml
<CustomField>
    <fullName>ReCobroker_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LK Re Co-Broker</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>