force-app/main/default/objects/Opportunity/fields/RefReins_lk__c.field-meta.xml
<CustomField>
    <fullName>RefReins_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ref. Reins</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>Reinsurance</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunities (Ref. Reins)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>