force-app/main/default/objects/Opportunity/fields/RefRetail_lk__c.field-meta.xml
<CustomField>
    <fullName>RefRetail_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ref. Retail</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Opportunity.RefRetail_lk__r.RecordTypeId</field>
            <operation>equals</operation>
            <value>Retail(Private/Renewal), Retail(Bidding)</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>