force-app/main/default/objects/Opportunity/fields/Reinsurer_lk__c.field-meta.xml
<CustomField>
    <fullName>Reinsurer_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reinsurer(Temp)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Reinsurer)</relationshipLabel>
    <relationshipName>OpportunitiesAsReinsurers</relationshipName>
    <type>Lookup</type>
</CustomField>