force-app/main/default/objects/Opportunity/fields/RemarkDeduction__c.field-meta.xml
<CustomField>
    <fullName>RemarkDeduction__c</fullName>
    <label>Remark (Other Deductions)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>