force-app/main/default/objects/Opportunity/fields/RenewalInsurancePolicy_lk__c.field-meta.xml
<CustomField>
    <fullName>RenewalInsurancePolicy_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RenewalInsurancePolicy</label>
    <referenceTo>InsurancePolicy</referenceTo>
    <relationshipLabel>Opportunities (RenewalInsurancePolicy)</relationshipLabel>
    <relationshipName>OpportunitiesbyRenewlPolicy</relationshipName>
    <type>Lookup</type>
</CustomField>