force-app/main/default/objects/Opportunity/fields/RenewalPlacement_lk__c.field-meta.xml
<CustomField>
    <fullName>RenewalPlacement_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Renewal Placement</label>
    <referenceTo>Placement__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>OpportunitiesbyRenewalPlacement</relationshipName>
    <type>Lookup</type>
</CustomField>