force-app/main/default/objects/Opportunity/fields/RICommPct__c.field-meta.xml
<CustomField>
    <fullName>RICommPct__c</fullName>
    <label>RI Comm(%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>