force-app/main/default/objects/Opportunity/fields/TotalOrderPct__c.field-meta.xml
<CustomField>
    <fullName>TotalOrderPct__c</fullName>
    <label>Total Order(%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>