force-app/main/default/objects/Opportunity/recordTypes/Reinsurance.recordType-meta.xml
<RecordType>
    <fullName>Reinsurance</fullName>
    <active>true</active>
    <businessProcess>ReIns</businessProcess>
    <label>Reinsurance</label>
</RecordType>