force-app/main/default/objects/Opportunity/recordTypes/Retail.recordType-meta.xml
<RecordType>
    <fullName>Retail</fullName>
    <active>false</active>
    <businessProcess>ReIns</businessProcess>
    <label>Retail</label>
</RecordType>