force-app/main/default/objects/Opportunity/recordTypes/RetailBidding.recordType-meta.xml
<RecordType>
    <fullName>RetailBidding</fullName>
    <active>true</active>
    <businessProcess>Retail%28Bidding%29</businessProcess>
    <label>Retail(Bidding)</label>
</RecordType>