force-app/main/default/objects/Opportunity/recordTypes/RetailPrivateRenewal.recordType-meta.xml
<RecordType>
    <fullName>RetailPrivateRenewal</fullName>
    <active>true</active>
    <businessProcess>Retail%28Private%2FRenewal%29</businessProcess>
    <label>Retail(Private/Renewal)</label>
</RecordType>