force-app/main/default/objects/Opportunity/validationRules/Change_Stage.validationRule-meta.xml
<ValidationRule>
    <fullName>Change_Stage</fullName>
    <active>false</active>
    <description>재보험 영업기회의 경우, Closed Won 된 이후, Stage 변경 불가</description>
    <errorConditionFormula>OR(ISPICKVAL(PRIORVALUE(StageName), &quot;Closed Won&quot;),
   ISPICKVAL(PRIORVALUE(StageName), &quot;Closed Lost&quot;)
) &amp;&amp; ISCHANGED(StageName) &amp;&amp;  RecordType.Name = &quot;Reinsurance&quot;</errorConditionFormula>
    <errorMessage>This opportunity has already been converted.</errorMessage>
</ValidationRule>