force-app/main/default/objects/Opportunity/validationRules/ClosedWon.validationRule-meta.xml
<ValidationRule>
    <fullName>ClosedWon</fullName>
    <active>false</active>
    <description>재보험 영업기회의 경우, Closed Won 처리 시, Binding Date 필수 입력</description>
    <errorConditionFormula>ISPICKVAL(StageName, &quot;Closed Won&quot;) &amp;&amp;  ISBLANK(BindingDate__c ) &amp;&amp; RecordType.Name = &quot;Reinsurance&quot;</errorConditionFormula>
    <errorMessage>Please insert the Binding Date.</errorMessage>
</ValidationRule>