force-app/main/default/objects/Opportunity/listViews/All_Reinsurance_Opportunity.listView-meta.xml
<ListView>
    <fullName>All_Reinsurance_Opportunity</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <columns>OPPORTUNITY.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.Reinsurance</value>
    </filters>
    <label>All Reinsurance Opportunity</label>
</ListView>